Fixed overflowing copy

--- a/css/component.css
+++ b/css/component.css
@@ -106,12 +106,11 @@
 }
 
 .og-fullimg{
-
     width: 64%;
 }
 
 .og-details {
-    padding: 0 40px 0 20px;
+    /*padding: 0 40px 0 20px;*/ /* Removed to allow more space for copy */
 }
 
 .og-fullimg {
@@ -133,7 +132,7 @@
 }
 
 .og-details h3 small{
-        font-weight: 200;
+    font-weight: 200;
 }
 
 .og-details h3 > small {
